z-index fix hero

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,7 @@
 .header {
 	position: fixed;
 	width: 100vw;
-	z-index: 10;
+	z-index: 15;
 	transition: opacity 0.5s ease-in-out;
 	background-color: white;
 	color: var(--main-color);
