--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -26,7 +26,7 @@
 	object-fit: cover;
 }
 .hero__section svg {
-	z-index: 20;
+	z-index: 10;
 	align-self: end;
 	position: relative;
 }
@@ -55,7 +55,7 @@
 .hero__content {
 	background-color: white;
 	color: var(--main-color);
-	z-index: 30;
+	z-index: 10;
 	align-self: end;
 	text-align: center;
 	display: flex;
